--- a/css/style.css
+++ b/css/style.css
@@ -25,11 +25,11 @@
 
 #watch{
     text-align: center;
-    width: 40vw;
-    height: 20vh;
+    width: 30vw;
+    height: 15vh;
     margin: 80px ;
-    padding: 100px 80px 80px 80px;
-    font-size: 100px;
+    padding: 100px;
+    font-size: 5rem;
     background-color: rgb(80, 80, 170);
     color: white;
     border-radius: 20px;
